kubernetes/system/sonarqube/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarqube.cluster.afflair.app`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: sonarqube-sonarqube
          port: 9000
  tls:
    certResolver: letsencrypt
